Added static Input class

--- a/tmpl8_2024-01.vcxproj
+++ b/tmpl8_2024-01.vcxproj
@@ -122,6 +122,7 @@
   <!-- END Custom section -->
   <ItemGroup>
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="ntk\input.cpp" />
     <ClCompile Include="ntk\gameobject.cpp" />
     <ClCompile Include="template\opencl.cpp" />
     <ClCompile Include="template\opengl.cpp" />
@@ -142,6 +143,7 @@
   <ItemGroup>
     <ClInclude Include="cl\tools.cl" />
     <ClInclude Include="game.h" />
+    <ClInclude Include="ntk\input.h" />
     <ClInclude Include="ntk\gameobject.h" />
     <ClInclude Include="template\common.h" />
     <ClInclude Include="template\opencl.h" />
