--- a/tmpl8_2024-01.vcxproj
+++ b/tmpl8_2024-01.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="ntk\input.cpp" />
     <ClCompile Include="ntk\gameobject.cpp" />
     <ClCompile Include="ntk\resourceholder.cpp" />
+    <ClCompile Include="player.cpp" />
     <ClCompile Include="template\opencl.cpp" />
     <ClCompile Include="template\opengl.cpp" />
     <ClCompile Include="template\scene.cpp">
@@ -147,6 +148,7 @@
     <ClInclude Include="ntk\input.h" />
     <ClInclude Include="ntk\gameobject.h" />
     <ClInclude Include="ntk\resourceholder.h" />
+    <ClInclude Include="player.h" />
     <ClInclude Include="template\common.h" />
     <ClInclude Include="template\opencl.h" />
     <ClInclude Include="template\opengl.h" />
