--- a/cmgt_pr-intake.vcxproj
+++ b/cmgt_pr-intake.vcxproj
@@ -123,6 +123,7 @@
   <ItemGroup>
     <ClCompile Include="game.cpp" />
     <ClCompile Include="ntk\entities\GameObject.cpp" />
+    <ClCompile Include="ntk\entities\Player.cpp" />
     <ClCompile Include="ntk\management\ResourceHolder.cpp" />
     <ClCompile Include="template\opencl.cpp" />
     <ClCompile Include="template\opengl.cpp" />
@@ -144,6 +145,7 @@
     <ClInclude Include="cl\tools.cl" />
     <ClInclude Include="game.h" />
     <ClInclude Include="ntk\entities\GameObject.h" />
+    <ClInclude Include="ntk\entities\Player.h" />
     <ClInclude Include="ntk\management\ResourceHolder.h" />
     <ClInclude Include="template\common.h" />
     <ClInclude Include="template\opencl.h" />
