Working on projectiles

--- a/cmgt_pr-intake.vcxproj.filters
+++ b/cmgt_pr-intake.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="ntk\utility\GameTime.cpp">
       <Filter>ntk\utility</Filter>
     </ClCompile>
+    <ClCompile Include="ntk\entities\Projectile.cpp">
+      <Filter>ntk\entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cl\tools.cl" />
@@ -80,6 +83,9 @@
     </ClInclude>
     <ClInclude Include="ntk\utility\GameTime.h">
       <Filter>ntk\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="ntk\entities\Projectile.h">
+      <Filter>ntk\entities</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
