--- a/cmgt_pr-intake.vcxproj
+++ b/cmgt_pr-intake.vcxproj
@@ -126,7 +126,7 @@
     <ClCompile Include="ntk\entities\Projectile.cpp" />
     <ClCompile Include="ntk\management\AsteroidPool.cpp" />
     <ClCompile Include="ntk\management\GameWorld.cpp" />
-    <ClCompile Include="ntk\utility\GameTime.cpp" />
+    <ClCompile Include="ntk\utility\Helpers.cpp" />
     <ClCompile Include="ntk\utility\Input.cpp" />
     <ClCompile Include="ntk\entities\GameObject.cpp" />
     <ClCompile Include="ntk\entities\Player.cpp" />
@@ -158,7 +158,7 @@
     <ClInclude Include="ntk\entities\GameObject.h" />
     <ClInclude Include="ntk\entities\Player.h" />
     <ClInclude Include="ntk\management\ResourceHolder.h" />
-    <ClInclude Include="ntk\utility\GameTime.h" />
+    <ClInclude Include="ntk\utility\Helpers.h" />
     <ClInclude Include="template\common.h" />
     <ClInclude Include="template\opencl.h" />
     <ClInclude Include="template\opengl.h" />
