--- a/cmgt_pr-intake.vcxproj.filters
+++ b/cmgt_pr-intake.vcxproj.filters
@@ -32,7 +32,7 @@
     <ClCompile Include="ntk\entities\Projectile.cpp">
       <Filter>ntk\entities</Filter>
     </ClCompile>
-    <ClCompile Include="ntk\utility\GameTime.cpp">
+    <ClCompile Include="ntk\utility\Helpers.cpp">
       <Filter>ntk\utility</Filter>
     </ClCompile>
     <ClCompile Include="ntk\utility\Input.cpp">
@@ -89,7 +89,7 @@
     <ClInclude Include="ntk\entities\Projectile.h">
       <Filter>ntk\entities</Filter>
     </ClInclude>
-    <ClInclude Include="ntk\utility\GameTime.h">
+    <ClInclude Include="ntk\utility\Helpers.h">
       <Filter>ntk\utility</Filter>
     </ClInclude>
     <ClInclude Include="ntk\utility\Input.h">
