--- a/cmgt_pr-intake.vcxproj.filters
+++ b/cmgt_pr-intake.vcxproj.filters
@@ -38,20 +38,26 @@
     <ClCompile Include="ntk\utility\Input.cpp">
       <Filter>ntk\utility</Filter>
     </ClCompile>
-    <ClCompile Include="ntk\management\GameWorld.cpp">
-      <Filter>ntk\management</Filter>
-    </ClCompile>
-    <ClCompile Include="ntk\management\ResourceHolder.cpp">
-      <Filter>ntk\management</Filter>
-    </ClCompile>
     <ClCompile Include="ntk\entities\Asteroid.cpp">
       <Filter>ntk\entities</Filter>
     </ClCompile>
-    <ClCompile Include="ntk\management\AsteroidPool.cpp">
-      <Filter>ntk\management</Filter>
-    </ClCompile>
     <ClCompile Include="ntk\management\CollisionSystem.cpp">
       <Filter>ntk\management</Filter>
+    </ClCompile>
+    <ClCompile Include="ntk\management\GameWorld.cpp">
+      <Filter>ntk\management\resources</Filter>
+    </ClCompile>
+    <ClCompile Include="ntk\management\ResourceHolder.cpp">
+      <Filter>ntk\management\resources</Filter>
+    </ClCompile>
+    <ClCompile Include="ntk\management\AsteroidPool.cpp">
+      <Filter>ntk\management\resources</Filter>
+    </ClCompile>
+    <ClCompile Include="ntk\management\GameManager.cpp">
+      <Filter>ntk\management</Filter>
+    </ClCompile>
+    <ClCompile Include="ntk\ui\Label.cpp">
+      <Filter>ntk\ui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -98,20 +104,26 @@
     <ClInclude Include="ntk\utility\Input.h">
       <Filter>ntk\utility</Filter>
     </ClInclude>
-    <ClInclude Include="ntk\management\GameWorld.h">
-      <Filter>ntk\management</Filter>
-    </ClInclude>
-    <ClInclude Include="ntk\management\ResourceHolder.h">
-      <Filter>ntk\management</Filter>
-    </ClInclude>
     <ClInclude Include="ntk\entities\Asteroid.h">
       <Filter>ntk\entities</Filter>
     </ClInclude>
-    <ClInclude Include="ntk\management\AsteroidPool.h">
-      <Filter>ntk\management</Filter>
-    </ClInclude>
     <ClInclude Include="ntk\management\CollisionSystem.h">
       <Filter>ntk\management</Filter>
+    </ClInclude>
+    <ClInclude Include="ntk\management\GameWorld.h">
+      <Filter>ntk\management\resources</Filter>
+    </ClInclude>
+    <ClInclude Include="ntk\management\ResourceHolder.h">
+      <Filter>ntk\management\resources</Filter>
+    </ClInclude>
+    <ClInclude Include="ntk\management\AsteroidPool.h">
+      <Filter>ntk\management\resources</Filter>
+    </ClInclude>
+    <ClInclude Include="ntk\management\GameManager.h">
+      <Filter>ntk\management</Filter>
+    </ClInclude>
+    <ClInclude Include="ntk\ui\Label.h">
+      <Filter>ntk\ui</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -129,6 +141,12 @@
     </Filter>
     <Filter Include="ntk\management">
       <UniqueIdentifier>{d9adb2e5-687b-4c75-81f3-a186eecd1c61}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ntk\management\resources">
+      <UniqueIdentifier>{cf1153fb-ea7f-485d-8c08-af0f97cf9344}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ntk\ui">
+      <UniqueIdentifier>{8ae269d7-2168-4445-b807-6bebc08b1cfe}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
